# chatgpt_cli

./: .gitignore  Cargo.toml  README.md  queries.http
src/: main.rs
